<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingBottom="4dip"
        android:text="@string/intent_activity_flags"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/flag_activity_clear_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_activity_clear_task" >

        <requestFocus />
    </Button>

    <Button
        android:id="@+id/flag_activity_clear_task_pi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_activity_clear_task_pi" >

        <requestFocus />
    </Button>

</LinearLayout>