<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dip" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="4dip"
            android:text="@string/persistent_msg"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dip"
            android:text="@string/saves_state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/green"
            android:freezesText="true"
            android:text="@string/initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="4dip"
            android:paddingTop="8dip"
            android:text="@string/no_saves_state"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/red"
            android:text="@string/initial_text"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>
    </LinearLayout>

</ScrollView>